Refactor Spark configuration and update dependencies for improved performance: - Added new JVM options in run.sh for enhanced security. - Excluded kafka-clients dependency in pom.xml to avoid conflicts. - Updated SparkConfig to utilize SparkSession for better integration. - Refactored AdEventSparkStreamer to improve batch processing and logging. - Changed SQL query in AggregatedCampaignStatsRepository to use native query for better performance. - Removed CampaignStatsControllerTest as part of cleanup.